--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
     <div class="content">
       @@include('components/header.html')
 
+      @@include('pages/index/_main.html')
+      @@include('pages/index/_products.html')
+      @@include('pages/index/_reliably.html')
+      @@include('pages/index/_partners.html')
+      @@include('pages/index/_about.html')
 
 
     </div>
