--- a/src/pages/index/_reliably.html
+++ b/src/pages/index/_reliably.html
@@ -18,7 +18,7 @@
           <img src="./img/index/reliably/map.svg" alt="">
         </div>
       </div>
-      <div class="reliably-body__card">
+      <!-- <div class="reliably-body__card">
         <div class="reliably-body__card-info">
           <div class="reliably-body__card-title" data-aos="fade-up">
             Скорость
@@ -44,6 +44,42 @@
         </div>
         <div class="reliably-body__card-img" data-aos="fade">
           <img src="./img/index/reliably/img2.jpg" alt="">
+        </div>
+      </div> -->
+    </div>
+  </div>
+  <div class="line_card">
+    <div class="line_card__img">
+      <img src="./img/index/reliably/img1.jpg" alt="">
+    </div>
+    <div class="line_card-content">
+      <div class="container">
+        <div class="line_card-body">
+          <div class="line_card-content__title" data-aos="fade-up">
+            Скорость
+          </div>
+          <div class="line_card-content__text" data-aos="fade-up">
+            Наличие собственных большегрузов позволяет нам обеспечивать быструю и надежную доставку нашей продукции до
+            места назначения.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="line_card _reverse">
+    <div class="line_card__img">
+      <img src="./img/index/reliably/img2.jpg" alt="">
+    </div>
+    <div class="line_card-content">
+      <div class="container">
+        <div class="line_card-body">
+          <div class="line_card-content__title" data-aos="fade-up">
+            Современное оборудование
+          </div>
+          <div class="line_card-content__text" data-aos="fade-up">
+            Мы используем современное и высокотехнологичное оборудование, что позволяет эффективно и качественно
+            производить бесшовные стальные трубы различных размеров и характеристик.
+          </div>
         </div>
       </div>
     </div>
