--- a/src/pages/production/_employees.html
+++ b/src/pages/production/_employees.html
@@ -47,7 +47,7 @@
   </div>
 </div>
 <section class="reliably reliably_employees">
-  <div class="container">
+  <!-- <div class="container">
     <div class="reliably-body">
       <div class="reliably-body__card">
         <div class="reliably-body__card-info">
@@ -76,6 +76,44 @@
         </div>
         <div class="reliably-body__card-img" data-aos="fade">
           <img src="./img/production/employees/img2.jpg" alt="">
+        </div>
+      </div>
+    </div> 
+  </div> -->
+
+  <div class="line_card">
+    <div class="line_card__img">
+      <img src="./img/production/employees/img1.jpg" alt="">
+    </div>
+    <div class="line_card-content">
+      <div class="container">
+        <div class="line_card-body">
+          <div class="line_card-content__title" data-aos="fade-up">
+            Наличие собственных большегрузов
+          </div>
+          <div class="line_card-content__text" data-aos="fade-up">
+            позволяет нам обеспечивать быструю и надежную доставку нашей продукции до места назначения. Мы контролируем
+            логистические процессы с начала до конца, что позволяет минимизировать задержки и обеспечивать своевременное
+            выполнение заказов.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="line_card _reverse">
+    <div class="line_card__img">
+      <img src="./img/production/employees/img2.jpg" alt="">
+    </div>
+    <div class="line_card-content">
+      <div class="container">
+        <div class="line_card-body">
+          <div class="line_card-content__title" data-aos="fade-up">
+            Наличие спецтехники
+          </div>
+          <div class="line_card-content__text" data-aos="fade-up">
+            на производстве позволяет увеличить эффективность и производительность работ, повышает гибкость и
+            мобильность в выполнении различных задач.
+          </div>
         </div>
       </div>
     </div>
