--- a/src/pages/production/_info.html
+++ b/src/pages/production/_info.html
@@ -23,7 +23,25 @@
   </div>
 </div>
 <section class="reliably production_info">
-  <div class="container">
+  <div class="line_card _reverse">
+    <div class="line_card__img">
+      <img src="./img/production/about/img4.jpg" alt="">
+    </div>
+    <div class="line_card-content">
+      <div class="container">
+        <div class="line_card-body">
+          <div class="line_card-content__title" data-aos="fade-up">
+            В производстве активно применяет цифровые технологии
+          </div>
+          <div class="line_card-content__text" data-aos="fade-up">
+            и программное обеспечение для оптимизации процессов и управления производством. Автоматизация и цифровизация
+            помогают повысить эффективность, сократить время и затраты на производство
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="container">
     <div class="reliably-body">
       <div class="reliably-body__card">
         <div class="reliably-body__card-info">
@@ -40,5 +58,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
