--- a/src/production.html
+++ b/src/production.html
@@ -13,7 +13,7 @@
       @@include('pages/production/_main.html')
       @@include('pages/production/_info.html')
       @@include('pages/production/_employees.html')
-      @@include('pages/index/_partners.html')
+      @@include('pages/production/_partners.html')
 
     </div>
     @@include('components/footer.html')
